Fix MacOS dark mode (MacOS 10.14)

--- a/_includes/css/media.css
+++ b/_includes/css/media.css
@@ -10,3 +10,7 @@
 	#title{line-height:1.3}
 	.entry-date{display:block}
 }
+@media (prefers-dark-interface){
+	html{background:#22262b;color:#fff}
+	a{color:#fff}
+}
